Added time listened in total, per track, and per artists